tests/type_errors/issorted_variant.nos
# expect_error: does not implement Ord
type Color = Red | Green | Blue
main() = [Red, Green, Blue].isSorted()
